--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@strapi/plugin-users-permissions": "4.2.0",
     "@strapi/strapi": "4.2.0",
     "better-sqlite3": "7.4.6",
+    "cloudinary": "^1.30.0",
     "pg": "^8.7.3",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "strapi-plugin-transformer": "^2.0.2",
+    "strapi-provider-upload-cloudinary": "^3.6.10"
   },
   "author": {
     "name": "A Strapi developer"
